fix clear button, kill scrollbar

--- a/web/assets/css/login.less
+++ b/web/assets/css/login.less
@@ -48,11 +48,6 @@
   line-height: 35px;
 }
 
-.team-selection .teams-list {
-  overflow-y: auto;
-  height: 300px - 35px - 1px;
-}
-
 .bright-text {
   color: @base05;
 }
